js/js.translator/testData/incremental/invalidation/typeScriptExports/lib2/l2.0.kt
class MyClass(konst stepId: Int) {
    fun qux() = foo() + stepId
}

